syntax = "proto3";

package pb;

import "inventory.proto";

option go_package="github.com/jynx/player-inventory/pb";

message CreateInventoryResponse {
    Inventory inventory = 1;
}
  
message CreateInventoryRequest {
    string player_id = 1;
}